sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:115: error: not found: value */
  if (getTrouBase() != origBaseTrou) deplacerTrou(origBaseTrou, origPosTrou, 1);*/
                                                                                ^